# dioscorides-viewer

./: .env.example  .gitignore  BECK_PLAN.md  CITATION.cff  LICENSE  LICENSE-DATA.md  NOTICE.md  PLAN.md  README.md  editions.json  gemini_ocr.py  index.html  pyproject.toml  run_pipeline.sh  scaffold.json  vision_ocr.py
docs/: DATA_LAYOUT.md  TEI_STANDARD.md  beck_private_ingest.md  ingest.md
editions/: editions.json  editions.toml
output/: berendes1902_epidoc.xml  sprengel_comm_epidoc.xml
pipeline/: pyproject.toml
pipeline/pharmacopoeia/: __init__.py  cli.py  paths.py
pipeline/pharmacopoeia/lemmas/: extract.py  seed_links.py  slugs.py
pipeline/pharmacopoeia/migrate/: beck2020.py  berendes1902.py  sprengel1829.py  sprengel1830_comm.py
pipeline/pharmacopoeia/normalize/: facs.py  lb.py
pipeline/pharmacopoeia/validators/: checks.py  schematron.py
pipeline/tests/: test_facs_rewrite.py  test_lb_normalize.py  test_slugs.py  test_sprengel1829.py  test_sprengel1830_comm.py
prompts/: beck_fresh_system.md  system.md  tei_header.xml
schemas/: pharmacopoeia.sch
scripts/: audit_beck_fresh_footnote_continuations.py  audit_beck_fresh_structure.py  audit_berendes_headings.py  audit_berendes_viewer.py  audit_sprengel_epidoc.py  audit_sprengel_headings.py  beck_fresh_diplomatic.py  build_beck_epidoc.py  build_beck_fresh_diplomatic.py  build_beck_fresh_footnote_review.py  build_manifest.py  build_sprengel_comm_epidoc.py  build_sprengel_epidoc.py  build_sprengel_manifest.py  diff_chapters.py  diff_ocr_xml.py  extract_beck_images.py  extract_scaffold.py  merge_chunks.py  (+23 more)
(+543 files in other folders)
