[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tei-maker"
version = "0.1.0"
description = "TEI/EpiDoc build and validation tooling for the Dioscorides viewer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Alchemies of Scent" }
]
dependencies = []

[project.scripts]
tei-maker = "tei_maker.cli:main"

[tool.setuptools.packages.find]
include = ["tei_maker*"]
